fix: edit Swagger
