# storage/api-docs/api-docs.json
@@ -9,15 +9,52 @@
         },
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "../api/v1",
+            "description": "version 1"
+        }
+    ],
     "paths": {
         "/users": {
             "get": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Users list.",
+                "summary": "Show users list.",
                 "description": "Display a listing of all users.",
-                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Show user data.",
+                "description": "Display a specified user.",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Identifier of the user.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success"
